update footer css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>TinDog</title>
   </head>
 
@@ -199,7 +199,7 @@
       </div>
       <div class="container">
         <div class="row d-flex text-center">
-          <div class="col">
+          <div class="col col-sm-12 col-md-4 col-lg-4">
             <div class="card mb-4 rounded-3 shadow-sm">
               <div class="card-header pink py-3">
                 <h4 class="my-0 fw-normal">Chihuahua</h4>
@@ -220,7 +220,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col col-sm-12 col-md-4 col-lg-4">
             <div class="card mb-4 rounded-3 shadow-sm">
               <div class="card-header pink py-3">
                 <h4 class="my-0 fw-normal">Labrador</h4>
@@ -240,7 +240,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col col-sm-12 col-md-4 col-lg-4">
             <div class="card mb-4 rounded-3 shadow-sm border-primary">
               <div class="card-header py-3 text-bg-dark border-primary">
                 <h4 class="my-0 fw-normal">Mastiff</h4>
@@ -268,11 +268,11 @@
       id="footer"
       class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top gradient-background p-3"
     >
-      <div class="col mb-3">©Tindog 2024</div>
-      <div class="col mb-3"></div>
-      <div class="col mb-3"></div>
-      <div class="col mb-3"></div>
-      <div class="col mb-3">
+      <div class="footer col mb-3">©Tindog 2024</div>
+      <div class="footer col mb-3"></div>
+      <div class="footer col mb-3"></div>
+      <div class="footer col mb-3"></div>
+      <div class="footer col mb-3">
         <h5>Section</h5>
         <ul class="nav flex-column justify-content-end">
           <li class="nav-item mb-2">
